--- a/public/home.html
+++ b/public/home.html
@@ -25,7 +25,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Nepse</h5>
+            <h5 class="card-title">Nepse Index</h5>
             <p class="card-text">Value</p>
             <p class="card-text">Change</p>
             <p class="card-text">Loss Gain</p>
